<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:fontFamily="@font/ubuntu_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/video_meeting_conference_app"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_16sdp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_marginTop="@dimen/_20sdp"
            android:includeFontPadding="false"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/textSignInLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp"/>

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp"/>

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_SignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/cardSignIn">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/textNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_6sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/btn_SignIn"/>

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_6sdp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNoAccount"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>